tests/snapshots/examples_basics/list_comprehension.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/list_comprehension.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/list_comprehension.flx:24:11
   |
24 |     print([x * 2 | x <- nums])
   |           ^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/list_comprehension.flx:27:11
   |
27 |     print([x | x <- nums, x % 2 == 0])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/list_comprehension.flx:30:11
   |
30 |     print([x * x | x <- nums, x > 2])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/list_comprehension.flx:33:11
   |
33 |     print([x | x <- r, x > 3, x < 8])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:38:11
   |
38 |     print([color + "-" + size | color <- colors, size <- sizes])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:42:11
   |
42 |     print([x * y | x <- small, y <- small])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:47:11
   |
47 |     print([x + y | x <- small, y <- small, x + y > 4])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:50:19
   |
50 |     let triples = [a + b + c | a <- r, b <- r, b >= a, c <- r, c >= b, a * a + b * b == c * c]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:56:11
   |
56 |     print([a + b | a <- ps, b <- qs])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/basics/list_comprehension.flx:57:11
   |
57 |     print([a * b | a <- ps, a > 1, b <- qs])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/list_comprehension.flx:58:11
   |
58 |     print([x | x <- nums, x > 1, x < 5])
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 11 errors.
== stdout ==
<not executed>
